; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/extr_socket.c_sock_splice_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/extr_socket.c_sock_splice_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.socket* }
%struct.socket = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 (%struct.socket*, i32*, %struct.pipe_inode_info*, i64, i32)* }
%struct.pipe_inode_info = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_splice_read(%struct.file* %0, i32* %1, %struct.pipe_inode_info* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.file*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.pipe_inode_info*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.socket*, align 8
  store %struct.file* %0, %struct.file** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.pipe_inode_info* %2, %struct.pipe_inode_info** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load %struct.file*, %struct.file** %7, align 8
  %14 = getelementptr inbounds %struct.file, %struct.file* %13, i32 0, i32 0
  %15 = load %struct.socket*, %struct.socket** %14, align 8
  store %struct.socket* %15, %struct.socket** %12, align 8
  %16 = load %struct.socket*, %struct.socket** %12, align 8
  %17 = getelementptr inbounds %struct.socket, %struct.socket* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32 (%struct.socket*, i32*, %struct.pipe_inode_info*, i64, i32)*, i32 (%struct.socket*, i32*, %struct.pipe_inode_info*, i64, i32)** %19, align 8
  %21 = icmp ne i32 (%struct.socket*, i32*, %struct.pipe_inode_info*, i64, i32)* %20, null
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i64 @unlikely(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %5
  %27 = load i32, i32* @EINVAL, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %6, align 4
  br label %45

29:                                               ; preds = %5
  %30 = load %struct.socket*, %struct.socket** %12, align 8
  %31 = getelementptr inbounds %struct.socket, %struct.socket* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @sock_update_classid(i32 %32)
  %34 = load %struct.socket*, %struct.socket** %12, align 8
  %35 = getelementptr inbounds %struct.socket, %struct.socket* %34, i32 0, i32 0
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i32 (%struct.socket*, i32*, %struct.pipe_inode_info*, i64, i32)*, i32 (%struct.socket*, i32*, %struct.pipe_inode_info*, i64, i32)** %37, align 8
  %39 = load %struct.socket*, %struct.socket** %12, align 8
  %40 = load i32*, i32** %8, align 8
  %41 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %9, align 8
  %42 = load i64, i64* %10, align 8
  %43 = load i32, i32* %11, align 4
  %44 = call i32 %38(%struct.socket* %39, i32* %40, %struct.pipe_inode_info* %41, i64 %42, i32 %43)
  store i32 %44, i32* %6, align 4
  br label %45

45:                                               ; preds = %29, %26
  %46 = load i32, i32* %6, align 4
  ret i32 %46
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @sock_update_classid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
